--- a/web-app/package.json
+++ b/web-app/package.json
@@ -9,11 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
+    "lucide-react": "^0.468.0",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-dropzone": "^14.2.3",
-    "lucide-react": "^0.468.0"
+    "react-dropzone": "^14.2.3"
   },
   "devDependencies": {
     "@types/node": "^20",
