--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,14 @@
+# Core FastAPI dependencies
+fastapi==0.128.0
+uvicorn==0.40.0
+pydantic==2.12.5
+
+# XML processing
+xmltodict==1.0.2
+
+# Development/Other tools
 watchdog
 streamlit
 docx2pdf
-
 typer
 rich
