--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -182,58 +182,5 @@ jobs:
         name: codecov-umbrella
       continue-on-error: true
 
-  deploy-staging:
-    name: Deploy to Staging
-    runs-on: ubuntu-latest
-    needs: [test, build]
-    if: github.ref == 'refs/heads/develop' && github.event_name == 'push'
-    environment:
-      name: staging
-      url: https://staging.iso20022-migration.example.com
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Deploy to staging
-      run: |
-        echo "Deploying to staging environment..."
-        echo "This step would typically deploy to Railway, Heroku, AWS, etc."
-        # Add your deployment commands here
-
-  deploy-production:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
-    needs: [test, build, security]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-    environment:
-      name: production
-      url: https://iso20022-migration.example.com
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Deploy to production
-      run: |
-        echo "Deploying to production environment..."
-        echo "This step would typically deploy to your production server"
-        # Add your production deployment commands here
-        
-    - name: Create release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        tag_name: v${{ github.run_number }}
-        release_name: Release v${{ github.run_number }}
-        body: |
-          Automated release from CI/CD pipeline
-          
-          Changes in this release:
-          - All 4 message types supported (MT103, MT101, MT102, MT202)
-          - Modern dark theme UI
-          - Comprehensive error handling
-        draft: false
-        prerelease: false
-      continue-on-error: true
+  # Note: Deployment is handled automatically by direct GitHub integration with Railway and Vercel.
+  # These jobs are removed to simplify the pipeline.
