--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -29,9 +29,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
+          cache-dependency-path: docs/package-lock.json
       
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       
       - name: Build website
         run: npm run build
